--- a/manifests/03-clusterrole.yaml
+++ b/manifests/03-clusterrole.yaml
@@ -356,11 +356,20 @@ rules:
     verbs:
       - impersonate
   - apiGroups:
-      - ""
+    - ""
     resources:
-      - pods
+    - configmaps
+    - pods
+    - events
     verbs:
-      - get
+    - '*'
+  - apiGroups:
+    - "apps"
+    resources:
+    - replicasets
+    verbs:
+    - "*"
+
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
