--- a/manifests/010-insights-operator-runtime.yaml
+++ b/manifests/010-insights-operator-runtime.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: insights-operator-runtime
+  namespace: openshift-insights
   labels:
     app.kubernetes.io/name: insights-operator-runtime
 spec:
