udpate security context of the insights-runtime-extractor's exporter container
Signed-off-by: Jeff Mesnil <jmesnil@redhat.com>

--- a/manifests/010-insights-runtime-extractor.yaml
+++ b/manifests/010-insights-runtime-extractor.yaml
@@ -26,6 +26,12 @@ spec:
           volumeMounts:
             - mountPath: /data
               name: data-volume
+          securityContext:
+            privileged: false
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+                - ALL
         - name: extractor
           image: ghcr.io/jmesnil/insights-runtime-extractor:latest
           imagePullPolicy: Always
