--- a/manifests/010-clusterrole-insights-runtime-extractor.yaml
+++ b/manifests/010-clusterrole-insights-runtime-extractor.yaml
@@ -5,12 +5,28 @@ metadata:
   name: insights-runtime-extractor-sa
   namespace: openshift-insights
 ---
+# The insights-runtime-extractor-role requires:
+# * access to authentication.k8s.io so that its kube-rbac-proxy
+#   can verify the client tokens
+# * access to securitycontextconstraints to set its scc.
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
   name: insights-runtime-extractor-role
   namespace: openshift-insights
 rules:
+- apiGroups:
+  - authentication.k8s.io
+  resources:
+  - tokenreviews
+  verbs:
+  - create
+- apiGroups:
+  - authorization.k8s.io
+  resources:
+  - subjectaccessreviews
+  verbs:
+  - create
 - apiGroups:
   - security.openshift.io
   resourceNames:
@@ -19,6 +35,20 @@ rules:
   - securitycontextconstraints
   verbs:
   - use
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: insights-runtime-extractor
+  namespace: openshift-insights
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: insights-runtime-extractor-role
+subjects:
+  - kind: ServiceAccount
+    name: insights-runtime-extractor-sa
+    namespace: openshift-insights
 ---
 apiVersion: security.openshift.io/v1
 kind: SecurityContextConstraints
@@ -37,15 +67,3 @@ seLinuxContext:
 seccompProfiles:
 - runtime/default
 ---
-apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
-metadata:
-  name: insights-runtime-extractor
-  namespace: openshift-insights
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: insights-runtime-extractor-role
-subjects:
-  - kind: ServiceAccount
-    name: insights-runtime-extractor-sa
