Update security constraints
so that the namespace allows to run container with privileged permissions

Signed-off-by: Jeff Mesnil <jmesnil@redhat.com>

--- a/manifests/010-insights-runtime-extractor.yaml
+++ b/manifests/010-insights-runtime-extractor.yaml
@@ -13,6 +13,8 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/name: insights-runtime-extractor
+      annotations:
+        openshift.io/required-scc: insights-runtime-extractor-scc
     spec:
       serviceAccountName: insights-runtime-extractor-sa
       hostPID: true
@@ -34,6 +36,13 @@ spec:
               name: insights-runtime-extractor-tls
             - mountPath: /etc/kube-rbac-proxy
               name: kube-rbac-proxy-cm
+          securityContext:
+            privileged: false
+            allowPrivilegeEscalation: false
+            capabilities:
+              drop:
+              - ALL
+            runAsNonRoot: true
           env:
             - name: IP
               valueFrom:
